fix: add missing key by wrapping the section in section tag with d-contents class in differentiatorsSection

--- a/styles/utility.globals.css
+++ b/styles/utility.globals.css
@@ -1,3 +1,7 @@
+.d-contents {
+    display: contents;
+}
+
 .bg-section-gredient {
     background: linear-gradient(99.85deg, #BA68C8 0%, rgba(186, 104, 200, 0) 100%);
 }
